Fixing 'i' on mobile

--- a/Idea1/css/idea1.css
+++ b/Idea1/css/idea1.css
@@ -1113,11 +1113,11 @@ footer a:hover {
     }
 
     .bg-i {
-        background: url(../img/i.png) no-repeat 0px 9px;
+        background: url(../img/i.png) no-repeat 0px 4px;
         background-size: 13px;
     }
     .bg-i-small {
-        background: url(../img/i.png) no-repeat 0px;
+        background: url(../img/i.png) no-repeat 0px 4px;
         background-size: 9px;
     }
 }
